--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <meta name="description" content="Web developer" />
+    <meta name="description" content="Desarrollador web. Apasionado de las APIs y del stack MERN." />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script src="https://kit.fontawesome.com/8f52711525.js" crossorigin="anonymous"></script>
     <title>Marcel Molina</title>
+
+    <meta property='og:locale' content='es_ES' />
+    <meta property='og:type' content='website' />
+    <meta property='og:title' content='Marcel Molina - Desarrollador Web' />
+    <meta property='og:description' content='Laravel, React, Node' />
+    <meta property='og:url' content='www.marcelmolina.tk' />
+    <meta property='og:site_name' content='Marcel Molina - Desarrollador Web' />
+    <meta property="og:image" content="http://marcelmolina.tk/RRSS.jpg">
 </head>
 
 <body>
